<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nacho.mannadrawe.activity.EditOrdenActivity"
    tools:showIn="@layout/activity_edit_orden">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:text="@string/prioridad"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:checked="false"
                android:id="@+id/radioGroupPrioridadEdit">

                <RadioButton
                    android:id="@+id/radioButtonPrioridad0Edit"
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prioridad_muy_alta"
                    />
                <RadioButton
                    android:id="@+id/radioButtonPrioridad1Edit"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prioridad_alta"/>
                <RadioButton
                    android:id="@+id/radioButtonPrioridad2Edit"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prioridad_media"/>
                <RadioButton
                    android:id="@+id/radioButtonPrioridad3Edit"
                    android:layout_marginTop="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prioridad_baja"/>

            </RadioGroup>
      </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:text="@string/estado"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

        <CheckBox
            android:id="@+id/checkBoxEstado0Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="7dp"
            android:text="@string/estado_parado"/>

        <CheckBox
            android:id="@+id/checkBoxEstado1Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/estado_rotura"/>

        <CheckBox
            android:id="@+id/checkBoxEstado2Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/estado_ruido"/>

         </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutUbicacionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:id="@+id/editTextUbicacionEdit"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ubicacion"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="3"
                android:maxLength="80"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescripcionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:id="@+id/editTextDescripcionEdit"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLines="10"
                android:maxLength="350"/>

        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    </LinearLayout>

    </ScrollView>