<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFondo"
            android:id="@+id/scrollViewAutor">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.nacho.mannadrawe.activity.AutorActivity"
              android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textViewDatosAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/nombre_autor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:textColor="@color/colorNegro"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/colorNegro"
        android:text="@string/email_autor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/colorNegro"
        android:text="@string/web_autor" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180sp"
        android:layout_height="180sp"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        app:srcCompat="@drawable/autor"
        android:layout_weight="0.25"/>

    <include
        layout="@layout/pie_de_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>

</ScrollView>